--- a/css/master.css
+++ b/css/master.css
@@ -52,7 +52,7 @@ nav a {
 
   #name {
     margin: 0 auto;
-    padding: 10% 0;
+    padding: 8% 0;
     text-align: center;
   }
 
@@ -73,5 +73,44 @@ nav a {
 .box {
   height: 100vh;
   width: 100vw;
-  background-color: grey;
+}
+
+.active {
+  text-decoration: underline;
+}
+
+#section_2 .photo {
+  border-radius: 500em;
+}
+
+#arrow {
+  margin-top: 4%;
+  width: 2%;
+}
+
+#arrow #arrowpath{
+  fill: #fff;
+}
+
+#arrow:hover{
+  cursor: pointer;
+}
+
+#section_3 video {
+  width: 30%;
+  display: inline-block;
+  margin: 2%;
+
+}
+
+#section_3 video:hover {
+  box-shadow: 0 0 15px grey;
+}
+
+#section_3{
+  text-align: center;
+}
+
+.fixnav{
+  background-color: black;
 }
