--- a/css/master.css
+++ b/css/master.css
@@ -86,18 +86,21 @@ nav a {
 
 #section_2 .photo {
 
-  margin-top: 10%;
+  margin-top: 14%;
   margin-left: 3%;
   border-radius: 500em;
   display: inline-block;
+  vertical-align: top;
 }
 
 #section_2 .about-me {
-  margin-top: 10%;
+  margin-top: 7%;
   display: inline-block;
-  width: 40%;
+  max-width: 40%;
   text-align: justify;
   margin-left: 10%;
+  letter-spacing: 0.1em;
+  line-height: 1.5em;
 }
 
 .about-me #title {
