--- a/css/master.css
+++ b/css/master.css
@@ -220,3 +220,20 @@ i:hover{
   color: grey;
   cursor: pointer;
 }
+
+.tech {
+  width: 100%;
+}
+
+.tech span{
+
+    color: white;
+    background-color: black;
+    min-width: 10%;
+    padding: 1%;
+    border-radius: 0.5em;
+    display: inline-block;
+    margin: 1% 1%;
+
+  /* list-style-type: none; */
+}
