--- a/css/master.css
+++ b/css/master.css
@@ -199,7 +199,15 @@ nav a {
   display: inline-block;
   width: 50%;
   vertical-align: top;
+  text-align: justify;
+
 }
+
+.port-content h2{
+display: inline-block;
+margin-right: 2%;
+}
+
 
 #section_3 h1 {
   padding-top: 5%;
@@ -223,6 +231,7 @@ i:hover{
 
 .tech {
   width: 100%;
+text-align: left;
 }
 
 .tech span{
@@ -234,13 +243,13 @@ i:hover{
     border-radius: 0.5em;
     display: inline-block;
     margin: 1% 1%;
+    text-align: center;
 
   /* list-style-type: none; */
 }
 
 .icons {
 margin: 0 auto;
-margin-top: 2%;
 width: 80%;
 }
 .icons i {
@@ -254,5 +263,6 @@ width: 80%;
 }
 
 #section_4 h1 {
-  margin-top: 7%;
+  padding-top: 6%;
+  margin: 0 auto;
 }
