--- a/css/master.css
+++ b/css/master.css
@@ -392,6 +392,19 @@ nav .tag {
     width: 10%;
   }
 
+#name{
+  padding-top: 15%;
+}
+  #name h1 {
+    margin-top: 10%;
+
+    font-size: 400%;
+  }
+  #name h2{
+    font-size: 250%;
+    margin-top: 10%;
+  }
+
   #tictactoe img, #dashboard img, #meetyou img, #loseit img, #portfolio img{
     width: 50%;
   }
@@ -430,6 +443,18 @@ nav .tag {
   #section_2 {
     height: 150vh;
   }
+  #name{
+    padding-top: 15%;
+  }
+    #name h1 {
+      margin-top: 10%;
+
+      font-size: 400%;
+    }
+    #name h2{
+      font-size: 250%;
+      margin-top: 10%;
+    }
 
   .tag{
     visibility: hidden;
@@ -479,6 +504,19 @@ nav .tag {
   font-size: 150%;
 
 }
+
+#name{
+  padding-top: 15%;
+}
+  #name h1 {
+    margin-top: 10%;
+
+    font-size: 500%;
+  }
+  #name h2{
+    font-size: 300%;
+    margin-top: 7%;
+  }
 #arrow {
   width: 10%;
 }
